# objc

./: .gitignore  .gitmodules  ApplicationDelegate_09Protocol_8h.html  ApplicationDelegate_09Protocol_8h_source.html  Application_8h.html  Application_8h__incl.map  Application_8h__incl.md5  Application_8h_source.html  CMakeLists.txt  CMakeLists.txt.improved  Collection_09Protocol_8h.html  Collection_09Protocol_8h_source.html  Doxyfile  Foundation_8h.html  Foundation_8h__dep__incl.map  Foundation_8h__dep__incl.md5  Foundation_8h__incl.map  Foundation_8h__incl.md5  Foundation_8h_source.html  GPIODelegate_09Protocol_8h.html  GPIODelegate_09Protocol_8h__incl.map  GPIODelegate_09Protocol_8h__incl.md5  GPIODelegate_09Protocol_8h_source.html  GPIOEvent_8h.html  GPIOEvent_8h_source.html  GPIOTypes_8h.html  GPIOTypes_8h__dep__incl.map  GPIOTypes_8h__dep__incl.md5  GPIOTypes_8h__incl.map  GPIOTypes_8h__incl.md5  GPIOTypes_8h_source.html  GPIO_8h.html  GPIO_8h__incl.map  GPIO_8h__incl.md5  GPIO_8h_source.html  InputManager_09Delegate_8h_source.html  InputManager_09Protocols_8h.html  InputManager_09Protocols_8h_source.html  JSONProtocol_8h.html  JSONProtocol_8h_source.html  (+987 more)
src/Application/: Application+Private.h  Application.m  ApplicationMain.m  CMakeLists.txt  GPIO+Private.h  GPIO.m  LED.m  NXTimer+Private.h  NXTimer.m
src/NXApplication/: Application+Private.h  Application.m  ApplicationMain.m  CMakeLists.txt  GPIO+Private.h  GPIO.m  NXTimer.m
src/NXFoundation/: CMakeLists.txt  NXApplication.m  NXArch.m  NXArray.m  NXAutoreleasePool.m  NXData.m  NXDate.m  NXFoundation+format.h  NXLog.m  NXMap+hash.c  NXMap+hash.h  NXMap.m  NXNotFound.m  NXNull.m  NXNumber.m  NXNumberBool.h  NXNumberBool.m  NXNumberInt.h  NXNumberInt.m  NXNumberInt16.m  NXNumberInt32.m  NXNumberInt64.h  NXNumberInt64.m  NXNumberUnsignedInt.h  NXNumberUnsignedInt16.h  NXNumberUnsignedInt16.m  NXNumberUnsignedInt32.h  NXNumberUnsignedInt32.m  NXNumberUnsignedInt64.h  NXNumberUnsignedInt64.m  NXNumberUnsignedint.m  NXNumberZero.h  NXNumberZero.m  NXObject+Description.m  NXObject.m  NXString+format.c  NXString+unicode.h  NXString.m  NXThread.m  NXTimeInterval.m  (+7 more)
src/Network/: CMakeLists.txt  NXNetworkTime.m  NXWireless+Private.h  NXWireless.m  NXWirelessNetwork+Private.h  NXWirelessNetwork.m
src/drivers/: CMakeLists.txt
src/drivers/bme280/: CMakeLists.txt  bme280.c
src/drivers/st7789/: CMakeLists.txt  st7789.c
src/drivers/uc8151/: CMakeLists.txt  uc8151.c
src/examples/: CMakeLists.txt
src/examples/app/: CMakeLists.txt  main.m
src/examples/bme280/: CMakeLists.txt  main.c
src/examples/clock/: CMakeLists.txt  main.c
src/examples/st7789/: CMakeLists.txt  main.c
src/examples/uc8151/: CMakeLists.txt  README.md  WIRING.md  main.c  partial_test.c
src/objc/: CMakeLists.txt  Object.m  alloc.c  api.h  autorelease.c  class.c  debug.c  debug.h  hexdump.c  hexdump.h  init.c  misc.c  objmsgsend-armv6m-pico.S  objmsgsend.c  panicf.c  runtime.c  runtime.h
src/objc-gcc/: CMakeLists.txt  NXConstantString.m  Object.m  api.h  class.c  class.h  hash.c  hash.h  hexdump.h  init.c  message.c  method.c  module.c  panicf.c
src/objc/arm64/: objc_msgSend.s
src/objc/x86_64/: objc_msgSend.s
src/runtime-fs/darwin/: CMakeLists.txt
src/runtime-fs/pico/: CMakeLists.txt  file.c
src/runtime-gcc/: CMakeLists.txt  NXConstantString.m  Object.m  Protocol.m  api.h  category.c  category.h  class.c  class.h  dtable.c  dtable.h  hash.c  init.m  message.c  module.c  mutex.c  panicf.c  printf.c  protocol.c  protocol.h  sprintf.c  statics.c  statics.h
src/runtime-hw/darwin/: CMakeLists.txt
src/runtime-hw/pico/: CMakeLists.txt  adc.c  gpio.c  hw.c  i2c.c  infrared_rx.c  infrared_rx.h  infrared_rx.pio  led.c  lwipopts.h  power.c  power.h  pwm.c  spi.c  watchdog.c  watchdog.h  wifi.c
src/runtime-net/darwin/: CMakeLists.txt
src/runtime-net/pico/: CMakeLists.txt  mqtt.c  net.c  ntp.c  ntp.h
src/runtime-pix/: CMakeLists.txt  display.c  mono.c  mono.h  pix.c  rgba32.c  rgba32.h  sdl.c
src/runtime-sys/darwin/: CMakeLists.txt  abort.c  env.c  exception.c  sys.c  timer.c
src/runtime-sys/linux/: CMakeLists.txt  env.c  mutex.c  random.c  sys.c  timer.c
src/runtime-sys/pico/: CMakeLists.txt  abort.c  cond.c  date.c  date.h  env.c  hash.c  mbedtls_config.h  memory.c  mutex.c  puts.c  random.c  sys.c  thread.c  time.c  timeget.c  timegm.c  timer.c  waitgroup.c
src/sys/darwin/: CMakeLists.txt  abort.c  malloc.c  puts.c  random.c  sleep.c
src/sys/linux/: CMakeLists.txt  abort.c  exception.c  puts.c  sleep.c  thread.c  time.c
src/test/: CMakeLists.txt  Test.h  Test.m  main.m
src/test2/: CMakeLists.txt  Object.h  Object.m  Test.h  Test.m  main.m  misc-armv6m-pico.s
src/tests/: CMakeLists.txt  README.md  runtime-objc.cmake  runtime-pix.cmake  test_bme280_debug.c
src/tests/NXApplication/: NXApplication.cmake
src/tests/NXApplication_01/: CMakeLists.txt  main.m
src/tests/NXFoundation/: NXFoundation.cmake
src/tests/NXFoundation_01/: CMakeLists.txt  main.m
src/tests/NXFoundation_02/: CMakeLists.txt  main.m
src/tests/NXFoundation_03/: CMakeLists.txt  main.m
src/tests/NXFoundation_04/: CMakeLists.txt  main.m
src/tests/NXFoundation_05/: CMakeLists.txt  main.m
src/tests/NXFoundation_06/: CMakeLists.txt  main.m
src/tests/NXFoundation_07/: main.m
src/tests/NXFoundation_08/: main.m
src/tests/NXFoundation_09/: main.m
src/tests/NXFoundation_10/: CMakeLists.txt  main.m  old.m
src/tests/NXFoundation_11/: main.m
src/tests/NXFoundation_12/: main.m
src/tests/NXFoundation_13/: main.m
src/tests/NXFoundation_14/: CMakeLists.txt  main.m
src/tests/NXFoundation_15/: CMakeLists.txt  main.m
src/tests/NXFoundation_16/: CMakeLists.txt  main.m
src/tests/NXFoundation_17/: main.m
src/tests/NXFoundation_18/: CMakeLists.txt  main.m
src/tests/NXFoundation_19/: main.m
src/tests/NXFoundation_20/: main.m
src/tests/NXFoundation_21/: CMakeLists.txt  main.m
src/tests/NXFoundation_22/: main.m
src/tests/NXFoundation_23/: main.m
src/tests/NXFoundation_24/: main.m
src/tests/fs/: runtime-fs.cmake
src/tests/hw_02/: main.c  (+1 more)
(+763 files in other folders)
